--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                     <p style="font-size: 1.5rem; color: #fff; text-shadow: 0 0 20px #fff, 0 0 30px var(--accent); font-weight: bold; letter-spacing: 5px;">
                         MASTER OF CODE
                     </p>
-                    <p style="font-size: 0.8rem; color: var(--accent); opacity: 0.8;"><a href="https://testsite-drab.vercel.app/">OPEN!</a></p>
+                    <p style="font-size: 0.8rem; color: var(--accent); opacity: 0.8;"><a href="https://naomasite.vercel.app/">OPEN!</a></p>
                 </div>
 
                 <div class="door door-left" style="position: absolute; top: 0; left: 0; width: 50%; height: 100%; background: linear-gradient(135deg, #161b22, #30363d); border-right: 2px solid var(--accent); z-index: 2; transition: transform 0.8s cubic-bezier(0.7, 0, 0.3, 1); display: flex; align-items: center; justify-content: flex-end;">
