--- a/kenkyu-2.html
+++ b/kenkyu-2.html
@@ -15,7 +15,7 @@
     <div class="warning">
         <h1>まだここには何もありません。</h1>
         <p>ここはなおまの研究所の最深部である。今はまだ開発中だ。</p>
-        <a href="https://testsite-drab.vercel.app/">こちらもよろしくお願いします。</a>
+        <a href="https://naomasite.vercel.app/">こちらもよろしくお願いします。</a>
     </div>
     <br>
     <a href="index.html">← メインへ戻る</a>
