--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
     </a>
 
     <a href="privacy.html" style="color: #999; text-decoration: none; font-size: 0.85rem; font-family: sans-serif; letter-spacing: 1px; border: 1px solid #444; padding: 4px 12px; border-radius: 2px; transition: 0.3s;">
-        PRIVACY POLICY
+        プライバシーポリシー
     </a>
 
 </div>
