--- a/404.html
+++ b/404.html
@@ -23,6 +23,6 @@
     <div class="glitch">404</div>
     <div class="msg">ERROR:お探しのページは見つかりませんでした。</div>
     <br><br>
-    <p><a href="index.html">メインへ帰還する</a></p>
+    <p><a href="index.html">研究所メインページへ戻る</a></p>
 </body>
 </html>
