--- a/kenkyu-2.html
+++ b/kenkyu-2.html
@@ -18,6 +18,6 @@
         <a href="https://naomasite.vercel.app/">こちらもよろしくお願いします。</a>
     </div>
     <br>
-    <a href="index.html">← メインへ戻る</a>
+    <a href="index.html">← 研究所メインページへ戻る</a>
 </body>
 </html>
