--- a/index.html
+++ b/index.html
@@ -407,11 +407,11 @@
 <div style="display: flex; align-items: center; justify-content: center; gap: 30px;">
 
     <a href="（お問い合わせのURL）" style="color: #999; text-decoration: none; font-family: sans-serif; letter-spacing: 1px; transition: 0.3s;">
-        CONTACT / お問い合わせフォーム
+        お問い合わせフォーム
     </a>
 
     <a href="privacy.html" style="color: #999; text-decoration: none; font-size: 0.85rem; font-family: sans-serif; letter-spacing: 1px; transition: 0.3s;">
-        PRIVACY POLICY
+        プライバシーポリシー
     </a>
 
 </div>
