--- a/privacy.html
+++ b/privacy.html
@@ -71,7 +71,7 @@
 <body>
 
 <div class="container">
-    <h1>Privacy Policy</h1>
+    <h1>プライバシーポリシー</h1>
     <p style="text-align: center; font-size: 0.8rem;">制定日：2026年2月21日</p>
 
     <section>
