--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
     </a>
 
     <a href="privacy.html" style="color: #999; text-decoration: none; font-size: 0.85rem; font-family: sans-serif; letter-spacing: 1px; transition: 0.3s;">
-        プライバシーポリシー
+        利用規約・プライバシーポリシー
     </a>
 
 </div>
