--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
         
 <div style="display: flex; align-items: center; justify-content: center; gap: 30px;">
 
-    <a href="（お問い合わせのURL）" style="color: #999; text-decoration: none; font-family: sans-serif; letter-spacing: 1px; transition: 0.3s;">
+    <a href="https://forms.gle/RhczXnx8noG16TGD7" style="color: #999; text-decoration: none; font-family: sans-serif; letter-spacing: 1px; transition: 0.3s;">
         お問い合わせフォーム
     </a>
 
