--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
         
         <details style="border-bottom: 1px solid rgba(88, 166, 255, 0.2);">
             <summary style="padding: 15px; cursor: pointer; color: var(--accent); font-weight: bold; list-style: none; display: flex; justify-content: space-between; align-items: center;">
-                <span>▶ 第1層：城の防衛プロトコル</span>
+                <span>▶ 第1層：サイトの防衛プロトコル</span>
                 <span style="font-size: 0.7rem; opacity: 0.5;">[CLICK TO OPEN]</span>
             </summary>
             <div style="padding: 15px; background: rgba(0,0,0,0.3); border-top: 1px solid rgba(88, 166, 255, 0.1); font-size: 0.9rem;">
