--- a/index.html
+++ b/index.html
@@ -52,61 +52,52 @@
 </nav>
 
 <style>
-    /* --- 基本設定（ダークモード基準） --- */
+    /* --- ナビゲーション全体の基本（ダークモード優先） --- */
     .top-nav {
-        background: rgba(22, 27, 34, 0.9);
-        backdrop-filter: blur(5px);
-        padding: 12px 0;
+        /* ダーク時は背景を深く、少し透かす */
+        background: rgba(13, 17, 23, 0.9); 
+        backdrop-filter: blur(8px);
+        padding: 15px 0;
         position: sticky;
         top: 0;
         z-index: 1000;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-    }
-
-    .top-nav ul {
-        list-style: none;
+        border-bottom: 1px solid rgba(88, 166, 255, 0.2);
         display: flex;
         justify-content: center;
-        gap: 15px;
-        margin: 0;
-        padding: 0;
-        flex-wrap: wrap;
+        transition: background 0.3s; /* 切り替えを滑らかに */
     }
 
+    /* リンクボタンの基本 */
     .top-nav a {
-        color: #c9d1d9; /* ダーク時の文字色 */
+        color: #c9d1d9;
         text-decoration: none;
-        font-size: 0.9rem;
+        font-size: 0.85rem;
         font-weight: bold;
-        padding: 8px 16px;
-        border-radius: 6px;
-        transition: 0.3s;
-        border: 1px solid rgba(255, 255, 255, 0.1);
+        padding: 8px 18px;
+        border-radius: 4px;
         background: rgba(255, 255, 255, 0.05);
+        border: 1px solid rgba(255, 255, 255, 0.1);
+        transition: 0.3s;
     }
 
-    /* --- 【重要】ライトモード（光の世界）での上書き設定 --- */
+    /* --- 【重要】ライトモード（光の世界）での自動転換 --- */
     @media (prefers-color-scheme: light) {
         .top-nav {
-            background: rgba(255, 255, 255, 0.9); /* 背景を白く */
-            border-bottom: 1px solid #ddd;
+            background: rgba(246, 248, 250, 0.9); /* ライト時は薄いグレー白 */
+            border-bottom: 1px solid #d0d7de;
         }
         .top-nav a {
-            color: #333; /* 文字を黒く */
-            background: #f0f0f0; /* ボタンを薄灰色に */
-            border: 1px solid #ccc;
-        }
-        .top-nav a:hover {
-            background: #005cc5; /* ホバー時は濃い青 */
-            color: #fff;
+            color: #24292f; /* 文字を濃く */
+            background: #ffffff;
+            border: 1px solid #d0d7de;
         }
     }
 
-    /* ホバー時の共通エフェクト */
+    /* ホバー時の挙動（研究所のアクセントカラー） */
     .top-nav a:hover {
         background: var(--accent, #58a6ff);
-        color: #0d1117;
-        box-shadow: 0 0 15px rgba(88, 166, 255, 0.4);
+        color: #fff !important;
+        box-shadow: 0 0 15px rgba(88, 166, 255, 0.5);
     }
 </style>
     <div class="container">
