--- a/info.html
+++ b/info.html
@@ -2,17 +2,157 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>なおまの研究所 - お知らせ</title>
-    </head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <style>
+        /* 共通の色彩魔導（CSS変数） */
+        :root {
+            --bg: #ffffff;
+            --text: #1a1a1a;
+            --accent: #3498db;
+            --nav-bg: rgba(255, 255, 255, 0.8);
+        }
+
+        [data-theme="dark"] {
+            --bg: #1a1a1a;
+            --text: #f4f4f4;
+            --nav-bg: rgba(26, 26, 26, 0.8);
+        }
+
+        body {
+            background-color: var(--bg);
+            color: var(--text);
+            font-family: 'Helvetica Neue', Arial, sans-serif;
+            margin: 0;
+            padding-top: 80px; /* ナビ用の余白 */
+            transition: background 0.3s, color 0.3s;
+        }
+
+        /* ナビゲーション（完璧バージョン） */
+        nav {
+            position: fixed;
+            top: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            background: var(--nav-bg);
+            backdrop-filter: blur(10px);
+            padding: 10px 20px;
+            border-radius: 50px;
+            display: flex;
+            align-items: center;
+            gap: 15px;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+            z-index: 1000;
+            border: 1px solid rgba(128,128,128,0.2);
+        }
+
+        .nav-button {
+            background: none;
+            border: none;
+            color: var(--text);
+            text-decoration: none;
+            font-size: 0.9rem;
+            font-weight: bold;
+            cursor: pointer;
+            transition: 0.3s;
+            padding: 5px 10px;
+        }
+
+        .nav-button:hover {
+            color: var(--accent);
+        }
+
+        /* Mode Switch スタイル */
+        .mode-switch {
+            cursor: pointer;
+            font-size: 1.2rem;
+            color: var(--text);
+            margin-left: 10px;
+        }
+
+        /* お知らせページ専用デザイン */
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        .info-card {
+            background: rgba(128, 128, 128, 0.05);
+            border-left: 5px solid var(--accent);
+            padding: 20px;
+            margin-bottom: 20px;
+            border-radius: 0 10px 10px 0;
+        }
+
+        .info-date {
+            font-family: monospace;
+            opacity: 0.7;
+            font-size: 0.9rem;
+        }
+
+        .info-title {
+            margin: 10px 0;
+            color: var(--accent);
+        }
+    </style>
+</head>
 <body>
-    <h1><i class="fas fa-bullhorn"></i> 研究所・更新履歴</h1>
-    <div class="info-content">
-        <h3>2026.02.22</h3>
-        <p>「お知らせ（info.html）」を独立稼働させました。これにより情報の集約が可能となりました。</p>
-        <hr>
-        <h3>2026.02.22</h3>
-        <p>sitemap.xmlをGoogleへ提出。検索結果への反映を待機中です。</p>
+
+    <nav>
+        <a href="index.html" class="nav-button">トップ</a>
+        <a href="kenkyu-2.html" class="nav-button">第2研究所</a>
+        <a href="info.html" class="nav-button" style="color: var(--accent);">お知らせ</a>
+        <a href="privacy.html" class="nav-button">規約</a>
+        <div class="mode-switch" id="modeToggle">
+            <i class="fas fa-moon"></i>
+        </div>
+    </nav>
+
+    <div class="container">
+        <h1><i class="fas fa-bullhorn"></i> 研究所・更新履歴</h1>
+        
+        <div class="info-card">
+            <div class="info-date">2026.02.22</div>
+            <h3 class="info-title">「お知らせ」ページの独立稼働</h3>
+            <p>情報の集約を目的とし、info.htmlを設立。デザインを本体と完全に同期させました。</p>
+        </div>
+
+        <div class="info-card">
+            <div class="info-date">2026.02.22</div>
+            <h3 class="info-title">Google検索への地図提出</h3>
+            <p>sitemap.xmlを配備。Google Search Consoleにて、世界への公開準備を完了しました。</p>
+        </div>
     </div>
-    <a href="index.html">研究所トップページへ戻る</a>
+
+    <script>
+        // Mode Switch の魔導回路（LocalStorage対応）
+        const modeToggle = document.getElementById('modeToggle');
+        const body = document.body;
+        const icon = modeToggle.querySelector('i');
+
+        // 保存されたテーマを適用
+        const savedTheme = localStorage.getItem('theme') || 'light';
+        body.setAttribute('data-theme', savedTheme);
+        updateIcon(savedTheme);
+
+        modeToggle.addEventListener('click', () => {
+            const currentTheme = body.getAttribute('data-theme');
+            const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
+            
+            body.setAttribute('data-theme', newTheme);
+            localStorage.setItem('theme', newTheme);
+            updateIcon(newTheme);
+        });
+
+        function updateIcon(theme) {
+            if (theme === 'dark') {
+                icon.classList.replace('fa-moon', 'fa-sun');
+            } else {
+                icon.classList.replace('fa-sun', 'fa-moon');
+            }
+        }
+    </script>
 </body>
 </html>
