--- a/info.html
+++ b/info.html
@@ -91,6 +91,15 @@
         </button>
     </nav>
 
+    <div style="margin-top: 30px; border-left: 4px solid var(--border-color); padding-left: 20px;">
+    <h3>🔏 研究所通達</h3>
+    <ul>
+        <li>2026-02-22：googleへsitemapを提出</li>
+        <li>2026-02-22：プロトコルV3の最適化完了</li>
+        <li>2026-02-22：なおまによるデザイン統一</li>
+    </ul>
+</div>
+
     <script>
         const toggleBtn = document.getElementById('theme-toggle');
         const themeIcon = document.getElementById('theme-icon');
